everything but randomizing order of answers

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         
                     </div>
 
+                    <div id = "resultsIn">
+                        
+                    </div>
+
                 <div class = "started">
                     <h1>Welcome To The Environmental Trivia Game!</h1>
                     <br>
